# qt-tcp-server

./: .gitignore  CMakeLists.txt  main.cpp
resources/: application.qrc
resources/data/: calibration_results.xml
src/: main.cpp
src/calibration/: camera-calibration.cpp  camera-calibration.h
src/clients/: client.h
src/clients/http-client/: http-client.cpp  http-client.h
src/controllers/: main-controller.cpp  main-controller.h
src/database/: database-manager.cpp  database-manager.h
src/datatypes/: result.h  user.h
src/models/division/: Division.h
src/models/military-unit/: MilitaryUnit.h
src/models/result/: Result.h
src/models/subdivision/: Subdivision.h
src/models/user/: User.h
src/processing/: frame-processor.cpp  frame-processor.h
src/serialport/: serial-port-manager.cpp  serial-port-manager.h
src/servers/base-tcp-server/: base-tcp-server.cpp  base-tcp-server.h
src/servers/commands-server/: command-server.cpp  commands-server.h
src/servers/coordinates-server/: coordinates-server.cpp  coordinates-server.h
src/servers/sensor-server/: sensor-server.cpp  sensor-server.h
src/servers/sound-server/: sound-server.cpp  sound-server.h
src/utils/display-manager/: display-manager.cpp  display-manager.h
src/utils/globals-manager/: globals-manager.h
src/utils/json-parser/: json-parser.cpp  json-parser.h
src/utils/printer-manager/: printermanager.cpp  printermanager.h
src/widgets/debug-widget/: debug-widget.cpp  debug-widget.h
src/widgets/results-widget/: results-widget.cpp  results-widget.h
src/windows/main_window/: mainwindow.cpp  mainwindow.h
